--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>iNaturalist Identification Search</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <h1>Search iNaturalist Identifications</h1>
+    <form class="form" id="searchForm">
+        <label for="placeSearch">Search Place:</label>
+        <input type="text" id="placeSearch" name="place" placeholder="Enter place here">
+        <button type="submit">Search</button>
+    </form>
 
+    <!-- Div to display place search results -->
+    <div id="placeResults"></div>
+
+    <!-- Div to display identification results -->
+    <div id="identificationsResults"></div>
+</body>
+</html>
